<resources>
    <string name="app_name">Minor Project Allocation</string>
    <string name="coll">Project Name</string>
    <string name="row1Name">Project Name</string>
    <string name="row1des">Project Description</string>
    <string name="row1falname">Faculty Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_as_faculty">Register as Faculty</string>
    <string name="register_as_student">Register as Student</string>
    <string name="Fac_name">Faculty Name</string>
    <string name="Fac_id">Faculty id</string>
    <string name="click_to_login">Click to Login.</string>
    <string name="click_to_register_as_faculty">Click to Register as Faculty</string>
    <string name="project_list">Project List</string>
    <string name="department">Department</string>
    <string name="phone_no">Phone no.</string>
    <string name="designation">Designation</string>
    <string name="expetise">Field of Expertise</string>
    <string name="click_to_register_as_student">Click to Register as Student</string>
</resources>